fixed os and host alignment

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,18 +1,7 @@
 html, body {
   height: 100%;
 }
-.column {
-  float: left;
-  width: 25%;
-}
 
-.osPicture {
-  width:40px;
-  height:40px;
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
-}
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -38,3 +27,31 @@ html, body {
   
 }
 
+.column {
+  float: left;
+  width: 25%;
+}
+
+.hostPicture{
+  width:25%;
+  height:40px;
+  vertical-align:middle;
+  margin-left: auto;
+  margin-right: auto;
+  display:block;
+}
+
+.hostContainer {
+  float: left;
+  margin: 1%;
+  width: 23%;
+}
+.osPicture {
+  width:40px;
+  height:40px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+  margin-top: 20px;
+}
